<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    android:paddingLeft="40dp"
    android:onClick="onView"
    android:gravity="center"
    android:paddingRight="40dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout style="@style/LogLayout">

            <ImageView style="@style/LogImage" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/LogEdit"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <ImageView
                style="@style/LogIcon"
                android:src="@mipmap/ic_mail" />
        </RelativeLayout>

        <RelativeLayout style="@style/LogLayout">

            <ImageView style="@style/LogImage" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/LogEdit"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                style="@style/LogIcon"
                android:src="@mipmap/ic_lock" />
        </RelativeLayout>

        <RelativeLayout style="@style/LogLayout">

            <ImageView style="@style/LogImage" />

            <EditText
                android:id="@+id/etConfirmPassword"
                style="@style/LogEdit"
                android:hint="@string/confirm"
                android:inputType="textPassword" />

            <ImageView
                style="@style/LogIcon"
                android:src="@mipmap/ic_lock" />
        </RelativeLayout>

        <RelativeLayout style="@style/LogLayout">

            <ImageView style="@style/LogButton" />

            <TextView
                android:id="@+id/tvCreateAccount"
                style="@style/LogText"
                android:text="@string/create" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:onClick="onBack"
                    style="@style/LogLink" />

                <TextView
                    style="@style/LogTextLink"
                    android:text="Go Back" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>